syntax = "proto3";
option java_package = "com.ubtechinc.alpha";
import "DeskClock.proto";
message CmBatchDeleteDeskRequest {

 repeated DeskClock clockList = 1;

}

message CmBatchDeleteDeskResponse {

    bool isSuccess =1;
    int32 resultCode =2;

}

